VAYU-839: - removed MasterSlave/s and used MasterSlaveAdvertise/s - applied usage of "Prefer_Master/Slave" and "Forced_Master/Slave" as input by view model to fwAPI - removed initial setting of value for MasterSlaveAdvertise - added setting of initial setting of above using register read

--- a/ADIN.WPF/View/LinkPropertiesView.xaml
+++ b/ADIN.WPF/View/LinkPropertiesView.xaml
@@ -196,7 +196,7 @@
                                 <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
                             <TextBlock Grid.Column="0" Text="Master or Slave Preference: " Style="{StaticResource TextBlockstyle}"/>
-                            <ComboBox Grid.Column="1" ItemsSource="{Binding MasterSlaves}" SelectedItem="{Binding SelectedMasterSlave}" Style="{StaticResource ComboBoxFlatStyle}"/>
+                            <ComboBox Grid.Column="1" ItemsSource="{Binding MasterSlaveAdvertises}" SelectedItem="{Binding SelectedMasterSlaveAdvertise}" Style="{StaticResource ComboBoxFlatStyle}"/>
                         </Grid>
                     </GroupBox>
                 </Grid>
@@ -209,7 +209,7 @@
                                 <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
                             <TextBlock Grid.Column="0" Text="Forced Master or Slave: " Style="{StaticResource TextBlockstyle}"/>
-                            <ComboBox Grid.Column="1" ItemsSource="{Binding MasterSlaves}" SelectedItem="{Binding SelectedMasterSlave}" Style="{StaticResource ComboBoxFlatStyle}"/>
+                            <ComboBox Grid.Column="1" ItemsSource="{Binding MasterSlaveAdvertises}" SelectedItem="{Binding SelectedMasterSlaveAdvertise}" Style="{StaticResource ComboBoxFlatStyle}"/>
                         </Grid>
                     </GroupBox>
                 </Grid>
