VAYU-872: - added cable length to adin device and to device status viewmodel - added isvisiblecablelength to viewmodel for view - added cable length UI to view - added register read for cable length at firmware API

--- a/ADIN.WPF/View/DeviceStatusView.xaml
+++ b/ADIN.WPF/View/DeviceStatusView.xaml
@@ -103,6 +103,13 @@
                 </StackPanel>
             </Border>
 
+            <Border Style="{StaticResource BorderSyle}" Visibility="{Binding IsVisibleCableLength, Converter={StaticResource booleanVisibilityConverter}}">
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Cable Length: " Style="{StaticResource DeviceStatusTextBlockstyle}" />
+                    <TextBlock Text="{Binding CableLength}" Style="{StaticResource DeviceStatusValueStyle}"/>
+                </StackPanel>
+            </Border>
+
             <Border Style="{StaticResource BorderSyle}" Visibility="{Binding IsGigabitBoard, Converter={StaticResource booleanVisibilityConverter}}">
                 <Grid>
                     <Grid.ColumnDefinitions>
