--- a/ADIN.WPF/View/FrameGenCheckerView.xaml
+++ b/ADIN.WPF/View/FrameGenCheckerView.xaml
@@ -14,14 +14,26 @@
     </UserControl.Resources>
     <Grid Margin="0 10 0 0">
         <StackPanel HorizontalAlignment='Stretch' IsEnabled="{Binding IsDeviceSelected}">
-            <GroupBox Header='Enable Remote Loopback in Link Partner' Style="{StaticResource GroupBoxStyle}" Visibility="{Binding IsGigabitBoard, Converter={StaticResource booleanVisibilityConverter}}">
+            <GroupBox Margin="0 0 0 10" Header='Enable Remote Loopback in Link Partner' Style="{StaticResource GroupBoxStyle}" Visibility="{Binding IsGigabitBoard, Converter={StaticResource booleanVisibilityConverter}}">
                 <StackPanel Margin="0">
                     <TextBlock TextWrapping='Wrap' Text="Loopback can be conveniently enabled on a remote device to loopback frames for the frame checker to check." Style="{StaticResource TextBlockstyle}"   />
                     <telerik:RadButton Style="{StaticResource FramGenButtonStyle}" Content="Remote Loopback" ToolTip='Loops the data received from the remote PHY back to the remote PHY using all of the digital and analog circuitry.' Command="{Binding RemoteLoopbackCommand}" x:Name="RemoteLoopback"/>
                 </StackPanel>
             </GroupBox>
-
-            <GroupBox Header="Frame Generator in Local PHY" Style="{StaticResource GroupBoxStyle}" Margin="0 10 0 0" Visibility="{Binding IsGigabitBoard, Converter={StaticResource booleanVisibilityConverter}}">
+            <GroupBox Style="{StaticResource GroupBoxStyle}" Margin="0 0 0 0" Visibility="{Binding IsGigabitBoard, Converter={StaticResource booleanVisibilityConverter}}">
+                <GroupBox.Header>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="74"/>
+                            <ColumnDefinition Width="75"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Grid.Column="0" Text="Frame Generator in Local PHY" FontWeight="Bold"/>
+                        <telerik:RadRadioButton Grid.Column="1" Width="75" Margin="0" CornerRadius="4, 0, 0, 4" GroupName="SerDesMode" Style="{StaticResource RadioButtonStyle}" Content="Cu PHY" IsEnabled="{Binding IsFrameGenOff}" IsChecked="{Binding IsNotSerDes}"/>
+                        <telerik:RadRadioButton Grid.Column="2" Width="75" Margin="0" CornerRadius="0, 4, 4, 0" GroupName="SerDesMode" Style="{StaticResource RadioButtonStyle}" Content="SerDes" IsEnabled="{Binding IsFrameGenOff}" IsChecked="{Binding IsSerDesSelected}"/>
+                    </Grid>
+                </GroupBox.Header>
+                
                 <StackPanel Margin="0">
                     <CheckBox IsEnabled="{Binding FrameGenRunning}" ToolTip='Enable this to send a continuous stream of frames. Alternative is to send a burst of frames of a certain length.' IsChecked="{Binding EnableContinuousMode}" Style="{StaticResource CheckBoxStyle}">Continuous Mode until terminated.</CheckBox>
                     <Grid Margin="0 10 0 5" Visibility="{Binding EnableContinuousMode, Converter={StaticResource invertedBooleanVisibilityConverter}}">
